# SimpleComicsViewer-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
src/: file_history.rs  gresources.xml  image_container.rs  image_loader.rs  main.rs  main_window.rs  menu.ui  menu.xml  natural_sort.rs  pdf_loader.rs  types.rs  utils.rs  window.ui
